:alien: Correcting colors in dark mode

--- a/social-media-dashboard-with-theme-switcher-master/styles.css
+++ b/social-media-dashboard-with-theme-switcher-master/styles.css
@@ -42,6 +42,7 @@ body {
   display: flex;
   overflow: hidden;
   align-items: center;
+  background: var(--bg);
   flex-direction: column;
 }
 
